# aos_cloud_test

./: .gitignore  README.md  command_handler.py  config.json  config_loader.py  file_server.py  http_server.py  main.py  pyproject.toml  requirements.txt  websocket_server.py
.github/: copilot-instructions.md
items/demo_service/: config.yaml  index.json  manifest.json
items/demo_service/rootfs/: demo_service.py
items/demo_service/rootfs/demo_service/: demo_service.py
items/server_service/: config.yaml
items/server_service/rootfs/server_service/: server_service.py
messages/: desiredstatus.json  desiredstatus_server.json
src/: __init__.py  command_handler.py  config_loader.py  main.py  messages.py  websocket_server.py
src/commands/: __init__.py  base.py  clear_command.py  help_command.py  loglevel_command.py  quit_command.py  send_command.py  update_command.py
