[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
dependencies = [
  "fastapi==0.109.0",
  "uvicorn[standard]==0.27.0",
  "python-multipart==0.0.6",
  "websockets==12.0",
]
description = "Multi-server application with HTTP, WebSocket, and File servers"
name = "aos-cloud-test"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[project.scripts]
aos-cloud-test = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
where = ["."]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "pylint>=2.17.0",
  "mypy>=1.0.0",
]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "too-few-public-methods",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
python_version = "3.8"
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
